# epl-prediction-optimizer

./: .gitignore  .impeccable.md  README.md  epl_prediction_optimizer_plan_tracker.html  pyproject.toml
docs/: model_research.html
scripts/: ablation_test.py  analyze_model.py  compare_backtests.py  fetch_official_seasons.py  fetch_openfootball_gameweeks.py  rebuild_history.py
src/epl_prediction_optimizer/: __init__.py  challenge.py  paths.py  pipeline.py
src/epl_prediction_optimizer/app/: main.py
src/epl_prediction_optimizer/app/static/: styles.css
src/epl_prediction_optimizer/app/templates/: backtest.html  challenge.html  dashboard.html  data.html  model.html
src/epl_prediction_optimizer/cli/: main.py
src/epl_prediction_optimizer/ml/: analysis.py  features.py  model.py
src/epl_prediction_optimizer/optimizer/: candidates.py  solver.py
src/epl_prediction_optimizer/storage/: database.py  results.py
tests/: test_app.py  test_challenge.py  test_gameweeks.py  test_optimizer.py  test_pipeline.py  test_predictions.py  test_results.py
